--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.Mobile.cshtml
@@ -18,6 +18,8 @@
             {
                 string controlId = string.Format("product_attribute_{0}_{1}_{2}", attribute.ProductId, attribute.ProductAttributeId, attribute.Id);
                 string textPrompt = !string.IsNullOrEmpty(attribute.TextPrompt) ? attribute.TextPrompt : attribute.Name;
+				string disabled = (attribute.IsDisabled ? " disabled=\"disabled\"" : null);
+				
                 <dt><span class="text-prompt">
                     @textPrompt
                 </span>
@@ -37,7 +39,7 @@
                     {
                         case AttributeControlType.DropdownList:
                             {
-                        <select name="@(controlId)" id="@(controlId)">
+                        <select name="@(controlId)" id="@(controlId)"@(Html.Raw(disabled))>
                             @if (!attribute.IsRequired)
                             {
                                 <option value="0">---</option>
@@ -58,7 +60,7 @@
                             @foreach (var pvaValue in attribute.Values)
                             {
                                 <li>
-                                    <input id="@(controlId)_@(pvaValue.Id)" type="radio" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected" />
+                                    <input id="@(controlId)_@(pvaValue.Id)" type="radio" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected"@(Html.Raw(disabled)) />
                                     <label for="@(controlId)_@(pvaValue.Id)">@pvaValue.Name @(!String.IsNullOrEmpty(pvaValue.PriceAdjustment) ? " [" + pvaValue.PriceAdjustment + "]" : null)</label>
                                 </li>
                             }
@@ -71,7 +73,7 @@
                             @foreach (var pvaValue in attribute.Values)
                             {
                                 <li>
-                                    <input id="@(controlId)_@(pvaValue.Id)" type="checkbox" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected" />
+                                    <input id="@(controlId)_@(pvaValue.Id)" type="checkbox" name="@(controlId)" value="@pvaValue.Id" checked="@pvaValue.IsPreSelected"@(Html.Raw(disabled)) />
                                     <label for="@(controlId)_@(pvaValue.Id)">@pvaValue.Name @(!String.IsNullOrEmpty(pvaValue.PriceAdjustment) ? " [" + pvaValue.PriceAdjustment + "]" : null)</label>
                                 </li>
                             }
@@ -80,22 +82,22 @@
                             break;
                         case AttributeControlType.TextBox:
                             {
-                        <input name="@(controlId)" type="text" class="textbox" id="@(controlId)" value="@attribute.TextValue" />
+                        <input name="@(controlId)" type="text" class="textbox" id="@(controlId)" value="@attribute.TextValue"@(Html.Raw(disabled)) />
                             }
                             break;
                         case AttributeControlType.MultilineTextbox:
                             {
-                        <textarea id="@(controlId)" name="@(controlId)">@attribute.TextValue</textarea>
+                        <textarea id="@(controlId)" name="@(controlId)"@(Html.Raw(disabled))>@attribute.TextValue</textarea>
                             }
                             break;
                         case AttributeControlType.Datepicker:
                             {
-                        @Html.DatePickerDropDowns(controlId + "_day", controlId + "_month", controlId + "_year", DateTime.Now.Year, DateTime.Now.Year + 1, attribute.SelectedDay, attribute.SelectedMonth, attribute.SelectedYear)
+                        @Html.DatePickerDropDowns(controlId + "_day", controlId + "_month", controlId + "_year", DateTime.Now.Year, DateTime.Now.Year + 1, attribute.SelectedDay, attribute.SelectedMonth, attribute.SelectedYear, true, attribute.IsDisabled)
                             }
                             break;
                         case AttributeControlType.FileUpload:
                             {
-                        <input type="file" id="@(controlId)" name="@(controlId)"></input>
+                        <input type="file" id="@(controlId)" name="@(controlId)"@(Html.Raw(disabled))></input>
                             }
                             break;
                     }
