--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemEditPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BundleItemEditPopup.cshtml
@@ -128,6 +128,8 @@
 					@Html.ValidationMessageFor(model => model.Quantity)
 				</td>
 			</tr>
+			@if (Model.IsPerItemPricing)
+			{
 			<tr>
 				<td class="adminTitle">
 					@Html.SmartLabelFor(model => model.Discount)
@@ -146,6 +148,7 @@
 					@Html.ValidationMessageFor(model => model.DiscountPercentage)
 				</td>
 			</tr>
+			}
 			<tr>
 				<td class="adminTitle">
 					@Html.SmartLabelFor(model => model.HideThumbnail)
