Terms & conditions weren't displayed completely in one page checkout

--- a/src/Presentation/SmartStore.Web/Content/theme.common.less
+++ b/src/Presentation/SmartStore.Web/Content/theme.common.less
@@ -818,3 +818,14 @@ fieldset > legend {
     vertical-align: middle;
     margin-right: 4px;
 }
+
+#terms-of-service-modal {
+    width: 650px;
+}
+#terms-of-service-modal .modal-body {
+    min-height: 300px;
+    overflow: hidden;
+}
+#iframe-terms-of-service {
+    min-height: 400px;
+}
