--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -33,10 +33,10 @@
                 <script type="text/javascript">
                     $(document).ready(function () {
                         $("#terms-of-service-trigger").click(function () {
-                            $("#terms-of-service-modal .modal-body").html('<iframe id="iframe-terms-of-service" src="@Url.RouteUrl("TopicPopup", new { SystemName = "conditionsofUse" })" width="800" scrolling="yes" style="min-height:400px" frameBorder="0" />');
+                            $("#terms-of-service-modal .modal-body").html('<iframe id="iframe-terms-of-service" src="@Url.RouteUrl("TopicPopup", new { SystemName = "conditionsofUse" })" width="800" scrolling="yes" frameBorder="0" />');
                         });
                         $("#disclaimer-trigger").click(function () {
-                            $("#terms-of-service-modal .modal-body").html('<iframe id="iframe-terms-of-service" src="@Url.RouteUrl("TopicPopup", new { SystemName = "Disclaimer" })" width="800" scrolling="yes" style="min-height:400px" frameBorder="0" />');
+                            $("#terms-of-service-modal .modal-body").html('<iframe id="iframe-terms-of-service" src="@Url.RouteUrl("TopicPopup", new { SystemName = "Disclaimer" })" width="800" scrolling="yes" frameBorder="0" />');
                         });
 
 
@@ -48,8 +48,8 @@
                 </label>
 
                 <!-- Terms of service -->
-                <div id="terms-of-service-modal" class="modal hide fade" tabindex="-1" style="width: 650px">
-                    <div class="modal-body" style="min-height: 300px;overflow:hidden"></div>
+                <div id="terms-of-service-modal" class="modal hide fade" tabindex="-1">
+                    <div class="modal-body"></div>
                     <div class="modal-footer">
                         <button class="btn" data-dismiss="modal">@T("Common.Confirm")</button>
                     </div>
